ocpmanifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demoocp-service
spec:
  ports:
    - name: openshift
      port: 8080
      targetPort: 8080
  selector:
    app: html-frontend
  type: ClusterIP
